2007-06-19 Eric Belanger (Snowman) <eric@archlinux.org>
	* gtranslator-1.1.7-3
	added x86_64 to arch field
	added license
	removed gnome.sh sourcing : no longer necessary
	
2007-05-29 Alessio 'mOLOk' Bolognino <themolok@gmail.com>
	* gtranslator-1.1.7-3
	move from /opt/gnome to /usr