@@ -1,9 +1,10 @@
 # $Id$
-# Maintainer: Hugo Doria <hugo@archlinux.org>
+# Maintainer: Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
+# Contributor: Hugo Doria <hugo@archlinux.org>
 # Contributor: Christer Solskogen (solskogen@carebears.mine.nu)
 
 pkgname=gtranslator
-pkgver=1.9.6
+pkgver=1.9.7
 pkgrel=1
 pkgdesc="An enhanced gettext po file editor for the GNOME"
 arch=('i686' 'x86_64')
@@ -11,18 +12,20 @@ url="http://sourceforge.net/projects/gtranslator/"
 license=('GPL')
 depends=('gettext' 'libgnomeui' 'gtkspell' 'gdl' 'libglade' 'gtksourceview2')
 makedepends=('intltool>=0.40' 'gnome-doc-utils')
-install=gtranslator.install
+install=$pkgname.install
+options=('!libtool')
 source=(http://downloads.sourceforge.net/$pkgname/$pkgname-$pkgver.tar.gz)
+md5sums=('96333913348f7731b619857a755fb6fd')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
-  ./configure --prefix=/usr --sysconfdir=/etc \
-  	--disable-schemas-install
+
+  ./configure --prefix=/usr --sysconfdir=/etc --disable-schemas-install
   make || return 1
   make DESTDIR=${pkgdir} install
 
-  install -m755 -d "${pkgdir}/usr/share/gconf/schemas"
-  gconf-merge-schema "${pkgdir}/usr/share/gconf/schemas/${pkgname}.schemas" --domain $pkgname ${pkgdir}/etc/gconf/schemas/*.schemas || return 1
-  rm -f ${pkgdir}/etc/gconf/schemas/*.schemas
+  install -m755 -d ${pkgdir}/usr/share/gconf/schemas || return 1
+  gconf-merge-schema ${pkgdir}/usr/share/gconf/schemas/${pkgname}.schemas \
+    --domain ${pkgname} ${pkgdir}/etc/gconf/schemas/*.schemas || return 1
+  rm -f ${pkgdir}/etc/gconf/schemas/*.schemas || return 1
 }
-md5sums=('ad3f4bf0c84925552f8b3e5be5b7ce0f')
