@@ -1,3 +1,6 @@
+2010-02-23 Jaroslav Lichtblau (Dragonlord) <dragonlord@aur.archlinux.org>
+	* gtranslator-1.9.7-1
+
 2007-06-19 Eric Belanger (Snowman) <eric@archlinux.org>
 	* gtranslator-1.1.7-3
 	added x86_64 to arch field
